--- a/lib/pom.xml.hbs
+++ b/lib/pom.xml.hbs
@@ -8,7 +8,7 @@
   <groupId>{{groupId}}</groupId>
   <artifactId>{{artifactId}}</artifactId>
   <version>{{version}}</version>
-  <packaging>jar</packaging>
+  <packaging>{{packaging}}</packaging>
 
   <repositories>
     {{#each repositories as |repo|}}
