Added excludes for standard Maven files / dirs
- we don't want to package the POM nor the assembly descriptor itself
- we also exclude the target/ dir to avoid a loop of files

--- a/lib/assembly.xml.hbs
+++ b/lib/assembly.xml.hbs
@@ -10,6 +10,11 @@
     <fileSet>
       <directory>build</directory>
       <outputDirectory>./</outputDirectory>
+      <excludes>
+        <exclude>pom.xml</exclude>
+        <exclude>assembly.xml</exclude>
+        <exclude>target/</exclude>
+      </excludes>
     </fileSet>
   </fileSets>
 </assembly>
