--- a/lib/pom.xml.hbs
+++ b/lib/pom.xml.hbs
@@ -79,4 +79,34 @@
       </resource>
     </resources>
   </build>
+
+  <profiles>
+    <profile>
+      <id>assembly</id>
+      <build>
+      <plugins>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.0</version>
+          <configuration>
+            <descriptors>
+              <descriptor>assembly.xml</descriptor>
+            </descriptors>
+            <appendAssemblyId>false</appendAssemblyId>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+    </profile>
+  </profiles>
+
 </project>
