Use default project basedir for fileSet

--- a/lib/assembly.xml.hbs
+++ b/lib/assembly.xml.hbs
@@ -8,7 +8,7 @@
   <includeBaseDirectory>false</includeBaseDirectory>
   <fileSets>
     <fileSet>
-      <directory>build</directory>
+      <directory>${project.basedir}</directory>
       <outputDirectory>./</outputDirectory>
       <excludes>
         <exclude>pom.xml</exclude>
